# GraphPropertyPredict

./: .gitignore  CodeCopyPaste.py  Coloreo_Interactivo.py  README.md  algoritmo_mejorado.py  analyzeAlgo.ipynb  documentacion_completa.html  documentacion_completa.md  evaluateCorrectness.ipynb  examples.py  executeAlgorithm.py  finalAlgorithm.py  grafo_gui_bandwidth.py  grover_coloreo_qiskit.py  initialEDA.ipynb  moreExamples.py  ordering_coloring_dataset.jsonl  ordering_dataset.csv  package-lock.json  pyproject.toml  requirements.txt  results_8.csv  wayMoreExamples.py
configs/: bipartite_adjcnn.yaml  maxclique_densegcn.yaml
data/cache/: bipartite_n32_50k.pt
latex/: castellanoLatex.tex  documento_final_mejorado.tex  latexcode.tex  latexcode_backup.tex
out_dataset2/: ordering_dataset.csv  ordering_dataset.jsonl
runs/bipartite_adjcnn/: best.pt  events.out.tfevents.1764434463.Axel.36416.0  history.json  last.pt
scripts/: build_dataset.py  evaluate.py  predict.py  train.py
src/gpml/: registry.py
src/gpml/data/: collate.py  dataset.py  transforms.py
src/gpml/graphs/: __init__.py  families.py  sampler.py
src/gpml/models/: __init__.py  adj_cnn.py  adj_mlp.py  dense_gcn.py
src/gpml/tasks/: __init__.py  base.py  bipartite.py  custom_task_template.py  max_clique.py
src/gpml/training/: losses.py  metrics.py  trainer.py
src/gpml/utils/: config.py  device.py  seed.py
