[project]
name = "graph-property-ml"
version = "0.1.0"
description = "Modular adjacency-matrix ML for graph properties"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
  "networkx>=3.2",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "tensorboard>=2.14",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
