[project]
name = "graph-property-ml"
version = "0.1.0"
description = "Modular adjacency-matrix ML for graph properties"
requires-python = ">=3.10"
dependencies = [
  # Core
  numpy>=1.24
  torch>=2.1
  networkx>=3.2
  pyyaml>=6.0
  tqdm>=4.66

  # Logging / viz
  tensorboard>=2.14

  # Optional quality-of-life (recommended)
  rich>=13.7
  ipython>=8.18

  # Optional for exporting / deployment (only if you use them)
  onnx>=1.15
  onnxruntime>=1.17

]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
